# opennet_msg_broker

./: Dockerfile  README.md  consumer.py  docker-compose.yml  producer.py  pyproject.toml  utils.py
